evidently/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evidently-ingress
  namespace: evidently
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: evidently.rendonindustries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evidently-ui
                port:
                  number: 80
